--- a/css/styles.css
+++ b/css/styles.css
@@ -61,8 +61,9 @@ body {
 }
 .navi-list .navi-item-link.current {
     color: var(--accent-color);
+}
 /* Hero */
-.hero{
+.hero {
     background-color: var(--secondary-bg-color);
     letter-spacing: 0.06em;
     text-align: center;
